RESOLVED FIXED271908
[IFC][Integration] RELEASE_ASSERT() under LayoutIntegration::BoxTree::rendererForLayoutBox
https://bugs.webkit.org/show_bug.cgi?id=271908
Summary [IFC][Integration] RELEASE_ASSERT() under LayoutIntegration::BoxTree::rendere...
alan
Reported 2024-03-29 13:18:28 PDT
Attachments
[fast-cq]Patch (12.53 KB, patch)
2024-03-29 13:27 PDT, alan
no flags
alan
Comment 1 2024-03-29 13:27:51 PDT
Created attachment 470672 [details] [fast-cq]Patch
EWS
Comment 2 2024-04-03 10:02:09 PDT
Committed 277009@main (5001e0ea367f): <https://commits.webkit.org/277009@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 470672 [details].
Fujii Hironori
Comment 3 2024-04-03 17:03:17 PDT
Filed two regressions: Bug 272127 – REGRESSION(277009@main) fast/text/remove-renderer-and-select-crash.html makes a subsequent test crash: RELEASE_ASSERT(index != notFound) in LayoutIntegration::BoxTree::rendererForLayoutBox Bug 272123 – SHOULD NEVER BE REACHED in ~RenderTreeNeedsLayoutChecker for fast/text/remove-renderer-and-select-crash.html
alan
Comment 4 2024-04-03 17:18:33 PDT
(In reply to Fujii Hironori from comment #3) > Filed two regressions: Thank you. > Bug 272127 – REGRESSION(277009@main) > fast/text/remove-renderer-and-select-crash.html makes a subsequent test > crash: RELEASE_ASSERT(index != notFound) in > LayoutIntegration::BoxTree::rendererForLayoutBox That's interesting. > Bug 272123 – SHOULD NEVER BE REACHED in ~RenderTreeNeedsLayoutChecker for > fast/text/remove-renderer-and-select-crash.html This test case is skipped in Debug. How does this code runs then?
Fujii Hironori
Comment 5 2024-04-03 17:35:51 PDT
Yes, I know that. I created bug#272123 because bug#272127 comment#1 has to refer to bug#272123.
Note You need to log in before you can comment on or make changes to this bug.