Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.h
@@ -119,6 +119,7 @@ public:
     InlineIterator::LineBoxIterator lastLineBox() const;
 
     const RenderObject& rendererForLayoutBox(const Layout::Box&) const;
+    bool hasRendererForLayoutBox(const Layout::Box&) const;
     const RenderBlockFlow& flow() const { return downcast<RenderBlockFlow>(m_boxTree.rootRenderer()); }
     RenderBlockFlow& flow() { return downcast<RenderBlockFlow>(m_boxTree.rootRenderer()); }
 
